# uhackathons

./: .gitmodules  IDEAS.md  README.md  README.org  app.py  experiment_runner_plan.md  experiments.yaml  experiments_quick.yaml  pyproject.toml  tasks.md
GraphScraping/: Project.toml
GraphScraping/src/: GraphScraping.jl
arxivist/: Arxivist.ipynb  main.py  pyproject.toml
arxivist/arxivist/: citations.py  extractors.py  reference_abstracts.py
arxivist/org/: reference_abstracts.org
audio/subtitles/: extract_subtitles.py  pyproject.toml
audio/tts/: Azure AI Speech.ipynb  pyproject.toml
brt/pytantivy/: Cargo.toml  maturin_test.py
brt/pytantivy/benchmarking/: pytantivy_vs_eland.py
brt/pytantivy/src/: main.rs
bst/pytantivy/src/: index_registry.rs  polars_documents.rs
candlex/: mix.exs
candlex/lib/: text.ex
candlex/livebooks/: candlex.livemd
candlex/native/candlex/: Cargo.toml
candlex/native/candlex/src/: bigcode.rs  lib.rs  main.rs  text_generation.rs  utils.rs
category_thourism/: Project.toml  parsing_links.jl
category_thourism/outputs/: nlab_graph_edges.csv  nlab_graph_nodes.csv
category_thourism/src/: CategoryThourism.jl
egents/: egents.org  egents.py  llamaindex_egents.py  llms.py  main.py  mcp_egent_tools.py  mcp_server.py  pyproject.toml  smolagents_egents.py  tool_helpers.py
fastrag_util/: README.md  configs.py  create_doc_collection.py  create_plaid_index.py  main.py  plaid_app.py  pyproject.toml  python_code_querying.org  query_index.py  querying.org  search_client.py  search_evaluation.py
fastrag_util/conf/: index_code_config.yaml  index_code_config_50_tasks.yaml  index_code_config_small.yaml  index_readme_config.yaml
hf_util/: pixi.toml  zsl_app.py
hf_util/conf/: zsl_config.yaml
home_utils/: diagram2pdf.py  olmocr.org  olmocr2epub.py  pdf2epub.py  pyproject.toml  txt2epub.py
home_utils/audiobooks/: freedom_and_organization.part.jsonl
listboard/: github_analysis.org  pyproject.toml  yt_analysis.org
listboard/listboard/: __main__.py  cluster_analyzer.py  github_stars_data.py  util.py  youtube.py  yt_data.py
llm_search/dspy/: Qdrant_Indexing.ipynb  pyproject.toml  qdrant_example.py
llm_search/dspy/llm_search_dspy/: vllm_client.py
llm_search/llama_index/: app.py  pydantic_models.py  pyproject.toml
llms/assistants/: autogen_assistant.org  pyproject.toml
llms/dspy/: DSPy.ipynb  Qdrant_Indexing.ipynb  README.md  chroma_example.py  docker-compose.yml  pyproject.toml  qdrant_example.py
llms/dspy/app/: Dockerfile  app.py
llms/dspy/experiments/: DSPy_PDFs.ipynb
llms/dspy/llms_dspy/: dspy_modules.py  qdrant_rm.py  utils.py  vllm_client.py
llms/llama_index/: app.py  pydantic_models.py  rag.py
llms/llm-kgs/: lightrag.org  pyproject.toml
lmibrarian/: pyproject.toml
lmibrarian/lmibrarian/: llama_index_utils.py
lmibrarian/org/: book_parser.org
math/: Discrete_Curvature.ipynb
ml_algorithms/: Maximum_Variance_Unfolding.ipynb
neucgraph/: pixi.toml
neucgraph/Neucgraph/: Project.toml  graphs.jl  manifold_opt.jl
neucgraph/Neucgraph/src/: Neucgraph.jl  named_graph.jl  org_graph.jl
neucgraph/neucgraph/: Project.toml  graphs.jl
neucgraph/notebooks/: Julia_Hyperbolic.jl  Julia_Hyperbolic_ML.ipynb  Poincare_Embeddings.ipynb  organizer.livemd
noteboard/: extracting-org-roam.org  pyproject.toml
noteboard/noteboard/: __init__.py  github_stars.py  hyperbolicity.py  hyperbolicity_impl.py  org.py
noteboard/notebooks/: Eland.ipynb  Org_Notes_Clustering.ipynb  Org_Roam_Graph.ipynb
noteboard/test/: test_hyperbolicity.py  test_org.py
pandasearch/pytantivity/: Cargo.toml  pyproject.toml
pandasearch/pytantivity/src/: lib.rs
pandasearch/pytantivy/: Cargo.toml  pyproject.toml
pandasearch/pytantivy/src/: index_registry.rs  lib.rs  main.rs  polars_documents.rs  wrappers.rs
pandasearch/pytantivy/test/: test_rust_bindings.py
reinforcement_learning/: Gymnasium Intro.ipynb  pyproject.toml
rl_experiments/: __main__.py  analysis.py  config.py  experiment_runner_plan.md  experiments.yaml  pyproject.toml  runner.py  tracking.py
rl_experiments/rl_experiments/: __main__.py  analysis.py  runner.py  tracking.py
rl_experiments/tests/: conftest.py  test_config.py  test_tracking.py
sae_project/: SAE_EXPERIMENTS.org  pyproject.toml  sae_lens_download.py
saerch/: README.org  sae_lens.org
scraping/: llamaindex_webscraping.org  pyproject.toml
tests/: test_cli.py  test_config.py  test_runner.py  test_tracking.py
text_diversity/: pyproject.toml  text_diversity.org
textmap/: InterpEmbedTut.py  app.py  data_loading.py  dynamic_topic_modeling.py  dynamic_topic_models.org  pyproject.toml
textmap/tests/: perf.py  performance.py  performance_check.py  test_dynamic_topic_models.py
textmap/textmap/: __init__.py  data_loading.py  dynamic_topic_models.py  ldaseqmodel.py  ldaseqmodel_jax.py
textmap/textmap/tests/: test_dynamic_topic_models.py
tts/: KokoroPL.ipynb  dukaj_sample_config.yaml  hf_parler.org  kokoro.org  pixi.toml  pl_tts.org  pyproject.toml  tts_main.py
untaingle/: main.py  pyproject.toml
untaingle/app/: main.py  models.py  search.py  sources.py  storage.py
untaingle/templates/: answer.html  answer_content.html  answer_partial.html  answer_with_sources_partial.html  index.html  related.html  response_partial.html  sources.html  sources_partial.html
vespa_util/: VESPA_HOWTO.org  pyproject.toml
vespa_util/examples/vespa_rag/: HOWTO_VESPA_RAG.org  app_builders.py  documents.py  vespa_app.py
weaviate/: docker-compose-cpu.yaml  pyproject.toml  weaviate_pytrec_eval.py  wv.org
wikicrawl/: CLAUDE.md  main.py  paradox_wikis.org  pyproject.toml
wikicrawl/tests/: fixtures.py  test_mediawiki_utils.py
wikicrawl/wikicrawl/: mediawiki_utils.py
