[project]
name = "listboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "llvmlite>=0.44.0",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "yt-dlp>=2025.3.25",
]
