[tool.poetry]
name = "lmibrarian"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
beautifulsoup4 = "^4.12.3"
llama-index-llms-ollama = "^0.1.5"
llama-index = "^0.10.45"
llama-index-readers-web = "^0.1.18"
certifi = "^2024.6.2"
returns = "^0.23.0"
llama-index-embeddings-fastembed = "^0.1.4"
llama-index-embeddings-huggingface = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
