[tool.poetry]
name = "noteboard"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
eland = "^8.11.1"
ipykernel = "^6.28.0"
orgparse = "^0.4.20231004"
pydantic = "^2.5.3"
scikit-learn = "^1.3.2"
stop-words = "^2018.7.23"
optuna = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
