[project]
name = "noteboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitsandbytes==0.42.0",
    "ipykernel>=6.29.5",
    "latentscope>=0.5.2",
    "networkx>=3.2.1",
    "orgparse>=0.4.20231004",
    "orgroamtools>=0.1.5",
    "scikit-learn>=1.3.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
