[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dm-tree>=0.1.8",
    "gymnasium[box2d]>=1.0.0",
    "matplotlib>=3.10.0",
    "numpy==1.23.5",
    "ray[rllib]>=2.40.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
