[project]
name = "rl-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=1.2.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "stable-baselines3>=2.7.1",
    "swig>=4.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that train models (deselect with '-m \"not slow\"')",
]
