[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "gradio>=5.29.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = ["textmap"]
