[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.17.0",
    "gradio>=5.29.1",
    "numba>=0.61.2",
    "optax>=0.2.4",
    "pydantic>=2.11.4",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = ["textmap"]
