[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "textmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bertopic>=0.17.0",
    "bitsandbytes>=0.49.0",
    "gradio>=5.29.1",
    "huggingface-hub==0.35.3",
    "interp-embed",
    "numba>=0.61.2",
    "optax>=0.2.4",
    "pydantic>=2.11.4",
    "renumics-spotlight>=1.7.1",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = ["textmap"]

[tool.uv.sources]
interp-embed = { git = "https://github.com/lambdaofgod/interp_embed" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
