[tool.poetry]
name = "untaingle"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "^0.4.5"
uvicorn = "^0.30.6"
claudette = "^0.0.6"
fireworks-ai = "^0.15.0"
ollama = "^0.3.1"
fastapi = "^0.112.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
