[project]
name = "uhackathons_tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parler-tts",
    "tqdm>=4.67.1",
    "llvmlite==0.43",
    "azure-cognitiveservices-speech==1.30.0",
    "python-dotenv>=1.0.1",
    "kokoro>=0.7.13",
    "soundfile>=0.12.1",
    "misaki[en]>=0.7.13",
    "pip>=25.0.1",
    "ipykernel>=6.29.5",
    "beautifulsoup4>=4.13.3",
    "epitran>=1.26.0",
    "chardet>=5.2.0",
    "audiblez>=0.4.4",
    "pillow>=11.0.0",
    "wxpython>=4.2.2",
    "datasets>=3.3.0",
]
