[tool.poetry]
name = "llm-search-dspy"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.27.1"
qdrant-client = {extras = ["fastembed"], version = "^1.7.0"}
langchain = "^0.0.348"
unstructured = "^0.11.2"
tqdm = "^4.66.1"
dspy-ai = {path = "/home/kuba/Projects/forks/dspy"}
fire = "^0.5.0"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
