[project]
name = "assistants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "autogen-agentchat~=0.2",
    "beautifulsoup4>=4.12.3",
    "docker>=7.1.0",
    "duckduckgo-search>=6.3.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
