[tool.poetry]
name = "llms-dspy"
version = "0.1.0"
description = ""
authors = ["Jakub 'lambdaofgod' Bartczuk <bartczukkuba@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.27.1"
langchain = "^0.0.348"
unstructured = {extras = ["org"], version = "^0.11.2"}
tqdm = "^4.66.1"
fire = "^0.5.0"
ipdb = "^0.13.13"
qdrant-client = {extras = ["fastembed"], version = "^1.7.0"}
dspy-ai = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
