[project]
name = "llm-kgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioboto3>=13.3.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "asyncpg>=0.30.0",
    "hnswlib>=0.8.0",
    "lightrag-hku>=1.1.2",
    "nano-vectordb>=0.0.4.3",
    "networkx>=3.4.2",
    "numpy>=2.2.2",
    "ollama>=0.4.6",
    "openai>=1.59.8",
    "psycopg-pool>=3.2.4",
    "psycopg[binary,pool]>=3.2.4",
    "pydantic>=2.10.5",
    "pymilvus>=2.5.3",
    "pymongo>=4.10.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "setuptools>=75.8.0",
    "sqlalchemy>=2.0.37",
    "tenacity>=9.0.0",
    "textract>=1.6.5",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "xxhash>=3.5.0",
]
