[package]
name = "pytantivy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pytantivy"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
pyo3 = "0.19.0"
tantivy = "0.21.1"
tempfile = "3.9.0"
